--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,8 +2,9 @@ name: build-test
 
 on:
   check_run:  
-    - master
-    - releases/*
+    branches:
+      - master
+      - releases/*
   pull_request:
     branches:
       - master
